# zkb

./: .env.example  .gitignore  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
notebooks/: scratch.ipynb
src/zkb/: __init__.py  cli.py  db.py  helpers.py  note.py  query.py  schema.py  zkb.py
tests/: conftest.py  test_db.py  test_note.py  test_zdb.py  test_zkb.py  test_zkb_link.py  test_zkb_note.py  test_zkb_ontology.py  test_zkb_qa.py
tests/data/notes/: another_note.md  example_note.md
tests/spec/: AI_Assistant.md  Alice.md  Company.md  Engineer.md  Person.md  TechCorp.md  has-age.md  has-skill.md  lives_in.md  works_for.md
